@@ -1,8 +1,8 @@
 # -*- makefile -*-
 
-COMMON_ASFLAGS	= -m32 -nostdinc -fno-builtin
-COMMON_CFLAGS	= -ffreestanding -mrtd -mregparm=3
-COMMON_LDFLAGS	= -nostdlib -static -lgcc
+COMMON_ASFLAGS	= -nostdinc -fno-builtin -m32
+COMMON_CFLAGS = -fno-builtin -mrtd -mregparm=3 -m32
+COMMON_LDFLAGS	= -m32 -nostdlib
 
 # Used by various components.  These rules need to precede them.
 normal/lexer.c_DEPENDENCIES = grub_script.tab.h
